# Arm-AI-Optimization-Challenge

./: .gitignore  LICENSE  NOTICE.md  README.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/java/com/example/llama/: BenchmarkArchive.kt  MainActivity.kt  MessageAdapter.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/lfyxhappy/armai/: BenchmarkExporterTest.kt
android/lib/: build.gradle.kts
android/lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
android/lib/src/main/java/com/arm/aichat/: InferenceEngine.kt
android/lib/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
docs/: benchmark-protocol.md  model-artifacts.md  modern-mobile-llm-acceleration-plan.md  oneplus13-cpu-q4-results-20260718.md  oneplus13-device-capabilities-20260718.md  oneplus13-flash-q8-kv-results-20260718.md  reviewer-apk.md  roadmap.md  snapdragon-backend-profiles.md  submission.md
tools/: build-android.ps1  compare-benchmark-stages.ps1  fetch-llama.ps1  package-reviewer-apk.ps1  prepare-model.ps1  pull-benchmark-stages.ps1
